<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>cn.xbhel</groupId>
        <artifactId>flink-concepts-examples</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>shared</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <name>shared</name>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <argLine>
            --add-opens java.base/sun.nio.fs=ALL-UNNAMED
            --add-opens java.base/java.util=ALL-UNNAMED
            --add-opens java.base/java.lang=ALL-UNNAMED
            --add-opens java.base/java.io=ALL-UNNAMED
            --add-opens java.base/java.net=ALL-UNNAMED
            --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
            -Dfile.encoding=UTF-8
        </argLine>

        <log4j.version>2.17.1</log4j.version>
        <hutool.version>5.8.25</hutool.version>
        <lombok.version>1.18.20</lombok.version>
        <mockito.version>4.2.0</mockito.version>
        <junit.version>5.9.1</junit.version>
        <assertj.version>3.18.1</assertj.version>
    </properties>

</project>